# md-rag-mcp

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  install_instructions.md  mcp.json.template  query-frontmatter.sh  reindex-rag.sh  rovo-dev-mcp.json.template  search-rag.sh  setup_arch_environment.sh  setup_mac_environment.sh  setup_ubuntu_environment.sh  setup_win_instructions.md
.claude/: settings.json
.claude/agents/: journal-field-completer.md  journal-rag-search.md  weekly-retro-analyzer.md
.claude/commands/: commit.md  start.md
.tech/code/python_legacy/: LEGACY_README.md
.tech/code/python_legacy/mcp/: frontmatter_mcp.py  journal_rag_mcp.py  requirements.txt
.tech/code/python_legacy/scripts/: rag_search.py
.tech/code/rust_scripts/frontmatter_query/: Cargo.toml
.tech/code/rust_scripts/frontmatter_query/src/: main.rs
.tech/code/rust_scripts/rag_search/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-index/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-index/src/: embeddings.rs  main.rs  template_filter.rs
.tech/code/rust_scripts/rag_search/rag-search/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-search/src/: embeddings.rs  main.rs
.tech/docs/: MIGRATION_PLAN.md
code/: requirements.txt
code/mcp/: journal_rag_mcp.py  requirements.txt
code/scripts/: rag_search.py
journal/2025/04/: 18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  30.md
journal/2025/05/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md
template/: daily.md  prompt.md  weekly_retro.md
