[package]
name = "rag-index"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
walkdir.workspace = true
anyhow.workspace = true
gray_matter.workspace = true
lancedb.workspace = true
tokio.workspace = true
rand.workspace = true
arrow = { version = "55.2.0", features = ["test_utils"] }
fastembed.workspace = true
